# vision-router

./: .env.example  .gitignore  README.md  SOUL.md  install.sh  pyproject.toml  requirements.txt
src/vision/: __init__.py  __main__.py  cli.py  webui.py
src/vision/core/: preprocessor.py  router.py
src/vision/providers/: __init__.py  base.py  gemini.py  openrouter.py
src/vision_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
